--- a/.github/workflows/deploy-flogo.yaml
+++ b/.github/workflows/deploy-flogo.yaml
@@ -29,6 +29,7 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Deploy FLogo app in TIBCO Platform
+      - shell: bash
         env:
           PLATFORM_TOKEN: ${{ secrets.TOKEN }}
         run: |          
