--- a/.github/workflows/deploy-flogo.yaml
+++ b/.github/workflows/deploy-flogo.yaml
@@ -39,7 +39,7 @@ jobs:
           BASE_URL: ${{ env.BASE_URL }}
           FILE_TO_DEPLOY: src/customer-api.flogo
           APPLICATION_NAME: CustomerAPI-Hicham
-          OWNER: ${{ github.actor }}
+          GITHUB_USER: ${{ github.actor }}
         run: |
           # BASE URL
           BASE_URL=$BASE_URL
