--- a/.github/workflows/deploy-flogo.yaml
+++ b/.github/workflows/deploy-flogo.yaml
@@ -35,21 +35,21 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Deploy Flogo app in TIBCO Platform
         env:
-          PLATFORM_TOKEN: ${{ secrets.TOKEN }}
+          TOKEN: ${{ secrets.TOKEN }}
           BASE_URL: ${{ vars.BASE_URL }}
-          FILE_TO_DEPLOY: src/customer-api.flogo
-          APPLICATION_NAME: CustomerAPI-Hicham
-          GITHUB_USER: ${{ github.actor }}
+          FLOGO_FILE: src/customer-api.flogo
+          APP_NAME: customerAPI-Hicham
+          OWNER: ${{ github.actor }}
         run: |
-          # BASE URL
+          # Deploy app to TIBCO Platform
           #BASE_URL=$BASE_URL
           # Key:
-          TOKEN=$PLATFORM_TOKEN
+          #TOKEN=$PLATFORM_TOKEN
           # Flogo File to Deploy
-          FLOGO_FILE=$FILE_TO_DEPLOY
-          APP_NAME=$APPLICATION_NAME
+          #FLOGO_FILE=$FILE_TO_DEPLOY
+          #APP_NAME=$APPLICATION_NAME
           #Owner to use in tags
-          OWNER=$GITHUB_USER
+          #OWNER=$GITHUB_USER
           
           # Testing the API
           echo "Testing Connection to $BASE_URL using token $PLATFORM_TOKEN $TOKEN..."
