--- a/.github/workflows/deploy-flogo.yaml
+++ b/.github/workflows/deploy-flogo.yaml
@@ -91,4 +91,16 @@ jobs:
           sleep 5 
           echo "Application deployed with APP ID: $APP_ID: \n$output"
 
+          # Edit catalog-info.yaml with new appId
           sed -i -e "s/AppID: \([a-z0-9]*\)/AppID: $APP_ID/g" catalog-info.yaml
+
+          # Commit and Push Changes
+          # configure user
+          git config --global user.name "${{ github.actor }}"
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          # stage any file changes to be committed
+          git add .
+          # make commit with staged changes
+          git commit -m 'appId updated'
+          # push the commit back up to source GitHub repository
+          git push
