--- a/.github/workflows/deploy-flogo.yaml
+++ b/.github/workflows/deploy-flogo.yaml
@@ -96,8 +96,8 @@ jobs:
 
           # Commit and Push Changes
           # configure user
-          git config --global user.name "${{ github.actor }}"
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.name "$OWNER"
+          git config --global user.email "$OWNER@users.noreply.github.com"
           # stage any file changes to be committed
           git add .
           # make commit with staged changes
