--- a/.github/workflows/deploy-flogo.yaml
+++ b/.github/workflows/deploy-flogo.yaml
@@ -30,7 +30,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@master
 
       # Runs a set of commands using the runners shell
       - name: Deploy Flogo app in TIBCO Platform
