--- a/.github/workflows/deploy-flogo.yaml
+++ b/.github/workflows/deploy-flogo.yaml
@@ -109,8 +109,8 @@ jobs:
         if: steps.check_changes.outputs.has_changes == 'true'
         run: |
           # configure user
-          git config --global user.name "${{ github.actor }}"
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.name "$OWNER"
+          git config --global user.email "$OWNER@users.noreply.github.com"
 
           # stage any file changes to be committed
           git add .
