--- a/.github/workflows/deploy-flogo.yaml
+++ b/.github/workflows/deploy-flogo.yaml
@@ -31,25 +31,20 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
-
-      # Runs a set of commands using the runners shell
-      - name: Deploy Flogo app in TIBCO Platform
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TOKEN: ${{ secrets.TOKEN }}
-          BASE_URL: ${{ vars.BASE_URL }}
+          BASE_URL: ${{ secrets.BASE_URL }}
           FLOGO_FILE: src/customer-api.flogo
           APPLICATION_NAME: ${{ github.event.repository.name }}
           OWNER: ${{ github.actor }}
+
+      # Runs a set of commands using the runners shell
+      - name: Deploy Flogo app in TIBCO Platform
         run: |
           # Deploy app to TIBCO Platform
-          #BASE_URL=$BASE_URL
-          # Key:
-          #TOKEN=$PLATFORM_TOKEN
-          # Flogo File to Deploy
-          #FLOGO_FILE=$FILE_TO_DEPLOY
+
           APP_NAME=${APPLICATION_NAME,,}
-          #Owner to use in tags
-          #OWNER=$GITHUB_USER
           
           # Testing the API
           echo "Testing Connection to $BASE_URL using token $PLATFORM_TOKEN $TOKEN..."
